force-app/main/default/objects/EventsCategories__c/EventsCategories__c.object-meta.xml
<CustomObject>
    <label>EventsCategories</label>
    <nameField>
        <label>EventsCategories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventsCategories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>