force-app/main/default/objects/EventsCategories__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <label>color</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>