force-app/main/default/objects/EventsCategories__c/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <label>label</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>