force-app/main/default/objects/EventsCategories__c/fields/selected__c.field-meta.xml
<CustomField>
    <fullName>selected__c</fullName>
    <defaultValue>true</defaultValue>
    <label>selected</label>
    <type>Checkbox</type>
</CustomField>